--- a/app/view/css/component/button.css
+++ b/app/view/css/component/button.css
@@ -3,8 +3,10 @@
   font-size: 15px;
   padding: 0 30px 0 30px;
   border-radius: 5px;
+  width: 100%;
+  height: 25px;
   &:hover {
-    background-color: #111;
+    background-color: #ada9eb;
     color: #fff;
   }
 }
