--- a/app/view/css/global.css
+++ b/app/view/css/global.css
@@ -1,7 +1,17 @@
 body {
   background-color: #1e1e1e;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -13,13 +23,14 @@ body {
   min-height: 100vh;
 }
 .center {
-  background-color: #fff;
-  color: #000;
+  /* background-color: #465fc7; */
+  background-image: linear-gradient(to right, #465fc7, #b06ee6);
+  color: #fff;
   padding: 0 20px 10px 20px;
   margin: 0 20px 10px 20px;
 }
 .box-border {
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .box-center {
   width: 100%;
@@ -29,6 +40,14 @@ body {
 }
 .h1-center {
   text-align: center;
+}
+.link-a {
+  text-decoration: none;
+  color: #1e1e1e;
+  &:hover,
+  &:active {
+    color: #fff;
+  }
 }
 .error {
   color: red;
