--- a/app/view/css/global.css
+++ b/app/view/css/global.css
@@ -1,53 +1,53 @@
 body {
-  background-color: #5f62ce;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
-  margin: 0;
-  padding: 0;
+    background-color: #5f62ce;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        'Open Sans',
+        'Helvetica Neue',
+        sans-serif;
+    margin: 0;
+    padding: 0;
 }
 .body-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
 }
 .center {
-  background-image: linear-gradient(to right, #214aae, #8069db);
-  color: #fff;
-  padding: 0 20px 10px 20px;
-  margin: 0 20px 10px 20px;
+    background-image: linear-gradient(to right, #214aae, #8069db);
+    color: #fff;
+    padding: 0 20px 10px 20px;
+    margin: 0 20px 10px 20px;
 }
 .box-border {
-  border-radius: 5px;
+    border-radius: 5px;
 }
 .box-center {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .h1-center {
-  text-align: center;
+    text-align: center;
 }
 .link-a {
-  text-decoration: none;
-  color: #d6592b;
-  &:hover,
-  &:active {
-    color: #fff;
-  }
+    text-decoration: none;
+    color: #000;
+    &:hover,
+    &:active {
+        color: #fff;
+    }
 }
 .error {
-  color: red;
+    color: red;
 }
